manifests/price-monitoring/auth-provider-migrate.yaml
#
# Deployment
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-provider-migrate-deployment
  namespace: price-monitoring
  labels:
    app: price-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-monitoring
      server: auth-provider-migrate
  template:
    metadata:
      labels:
        app: price-monitoring
        server: auth-provider-migrate
    spec:
      containers:
        - name: auth-provider-migrate
          image: registry.local:5000/price-monitoring-auth-provider:b7f1498e7a268f0ff17f628505fe78a35c50f54b
          command:
            [
              "/bin/sh", "-c",
              # TODO: CrashLoopBackOffの暫定対応としてRailsサーバを起動する
              "RAILS_ENV=production rails db:create && \
               RAILS_ENV=production rails db:migrate && \
               ./bin/rails server -b 0.0.0.0 -p 3000 -e production"
            ]
          volumeMounts:
            - name: op-private-key
              mountPath: /app/certs/private.pem
              subPath: OP_PRIVATE_KEY
              readOnly: true
      volumes:
        - name: op-private-key
          secret:
            secretName: auth-provider-secret
