manifests/price-monitoring/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: price-monitoring
  labels:
    app: backend
spec:
  # 展開するレプリカ数
  replicas: 1
  # Label がこれらにマッチした Pod をこの ReplicaSet の配下に置く
  selector:
    matchLabels:
      app: backend
      server: backend

  # 展開する Pod の定義
  template:
    metadata:
      # この Pod につける Label
      labels:
        app: backend
        server: backend

    spec:
      # Container の定義
      containers:
        - name: backend
          # イメージの指定
          image: price-monitoring-backend:latest
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 3000
