manifests/price-monitoring/backend-migrate.yaml
#
# Deployment
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-migrate-deployment
  namespace: price-monitoring
  labels:
    app: price-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-monitoring
      server: backend-migrate
  template:
    metadata:
      labels:
        app: price-monitoring
        server: backend-migrate
    spec:
      containers:
        - name: backend-migrate
          image: registry.local:5000/price-monitoring-backend:c2408cf24ae7485e994a531da2d9a14454c44ed3
          command:
            [
              "/bin/sh", "-c",
              # TODO: CrashLoopBackOffの暫定対応としてRailsサーバを起動する
              "RAILS_ENV=production rails db:create && \
               RAILS_ENV=production rails db:migrate && \
               ./bin/rails server -b 0.0.0.0 -p 3000 -e production"
            ]
