manifests/price-monitoring/cloudflare-ddns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflare-ddns
  namespace: price-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflare-ddns
  template:
    metadata:
      labels:
        app: cloudflare-ddns
    spec:
      containers:
        - name: ddns
          image: favonia/cloudflare-ddns:latest
      restartPolicy: Always
