manifests/price-monitoring/auth-provider-db.yaml
#
# Service
#

apiVersion: v1
kind: Service
metadata:
  name: auth-provider-db-service
  namespace: price-monitoring
spec:
  selector:
    app: price-monitoring
    server: auth-provider-db
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 3306
      targetPort: 3306
  loadBalancerIP: 192.168.0.222

---
#
# Deployment
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-provider-db-deployment
  namespace: price-monitoring
  labels:
    app: price-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-monitoring
      server: auth-provider-db
  template:
    metadata:
      labels:
        app: price-monitoring
        server: auth-provider-db
    spec:
      containers:
        - name: auth-provider-db
          image: mysql/mysql-server:8.0
          ports:
            - name: http
              containerPort: 3306
          volumeMounts:
            - name: auth-provider-db-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: auth-provider-db-storage
          persistentVolumeClaim:
            claimName: auth-provider-db-pvc
