manifests/price-monitoring/auth-provider-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-provider-redis-service
  namespace: price-monitoring
spec:
  selector:
    app: price-monitoring
    server: auth-provider-redis
  type: ClusterIP
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-provider-redis-deployment
  namespace: price-monitoring
  labels:
    app: price-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-monitoring
      server: auth-provider-redis
  template:
    metadata:
      labels:
        app: price-monitoring
        server: auth-provider-redis
    spec:
      containers:
        - name: auth-provider-redis
          image: redis
          args: ["--appendonly", "yes"]
          ports:
            - name: redis
              containerPort: 6379
          volumeMounts:
            - name: auth-provider-redis-storage
              mountPath: /data
      volumes:
        - name: auth-provider-redis-storage
          persistentVolumeClaim:
            claimName: auth-provider-redis-storage
      securityContext:
        fsGroup: 999
