manifests/price-monitoring/auth-provider.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-provider-service
  namespace: price-monitoring
spec:
  selector:
    app: price-monitoring
    server: auth-provider
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  loadBalancerIP: 10.15.100.221

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-provider-deployment
  namespace: price-monitoring
  labels:
    app: price-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-monitoring
      server: auth-provider
  template:
    metadata:
      labels:
        app: price-monitoring
        server: auth-provider
    spec:
      containers:
        - name: auth-provider
          image: docker-registry.kuroweb.net/price-monitoring-auth-provider:b68501504d1ccdb21e9fbf7f11e7458bc67c464e
          command: ["./bin/rails", "server", "-b", "0.0.0.0", "-p", "3000", "-e", "production"]
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: op-private-key
              mountPath: /app/certs/private.pem
              subPath: OP_PRIVATE_KEY
              readOnly: true
      volumes:
        - name: op-private-key
          secret:
            secretName: auth-provider-secret
