manifests/price-monitoring/backend-batch-1.yaml
#
# Service
#

apiVersion: v1
kind: Service
metadata:
  name: backend-batch-1-service
  namespace: price-monitoring
spec:
  selector:
    app: price-monitoring
    server: backend-batch-1
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  loadBalancerIP: 192.168.0.211

---
#
# Deployment
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-batch-1-deployment
  namespace: price-monitoring
  labels:
    app: price-monitoring
spec:
  replicas: 6
  selector:
    matchLabels:
      app: price-monitoring
      server: backend-batch-1
  template:
    metadata:
      labels:
        app: price-monitoring
        server: backend-batch-1
    spec:
      containers:
        - name: backend-batch-1
          image: registry.local:5000/price-monitoring-backend:1c8e69378c2b99ab9aa511a96426e987cc67d461
          command: ["sidekiq", "-C", "config/sidekiq/crawl_process.yml", "-e", "production"]
          ports:
            - name: http
              containerPort: 3000
          resources:
            limits:
              cpu: "200m"
