manifests/price-monitoring/backend-batch-2.yaml
#
# Service
#

apiVersion: v1
kind: Service
metadata:
  name: backend-batch-2-service
  namespace: price-monitoring
spec:
  selector:
    app: price-monitoring
    server: backend-batch-2
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  loadBalancerIP: 192.168.0.218

---
#
# Deployment
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-batch-2-deployment
  namespace: price-monitoring
  labels:
    app: price-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-monitoring
      server: backend-batch-2
  template:
    metadata:
      labels:
        app: price-monitoring
        server: backend-batch-2
    spec:
      containers:
        - name: backend-batch-2
          image: registry.local:5000/price-monitoring-backend:5ca7f2187f19a6d20679d220ac2628ceba9f4a81
          command: ["sidekiq", "-C", "config/sidekiq/general_process.yml", "-e", "production"]
          ports:
            - name: http
              containerPort: 3000
          resources:
            limits:
              cpu: "200m"
