manifests/price-monitoring/backend-batch-3.yaml
#
# Service
#

apiVersion: v1
kind: Service
metadata:
  name: backend-batch-3-service
  namespace: price-monitoring
spec:
  selector:
    app: price-monitoring
    server: backend-batch-3
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  loadBalancerIP: 192.168.0.219

---
#
# Deployment
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-batch-3-deployment
  namespace: price-monitoring
  labels:
    app: price-monitoring
spec:
  replicas: 2
  selector:
    matchLabels:
      app: price-monitoring
      server: backend-batch-3
  template:
    metadata:
      labels:
        app: price-monitoring
        server: backend-batch-3
    spec:
      containers:
        - name: backend-batch-3
          image: registry.local:5000/price-monitoring-backend:b0eda48e7674873ae5d010c68b207a94edbac871
          command: ["sidekiq", "-C", "config/sidekiq/crawl_process_2.yml", "-e", "production"]
          ports:
            - name: http
              containerPort: 3000
          resources:
            limits:
              cpu: "200m"
