manifests/price-monitoring/backend-batch.yaml
#
# Service
#

apiVersion: v1
kind: Service
metadata:
  name: backend-batch-service
  namespace: price-monitoring
spec:
  selector:
    app: price-monitoring
    server: backend-batch
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  loadBalancerIP: 192.168.0.211

---
#
# Deployment
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-batch-deployment
  namespace: price-monitoring
  labels:
    app: price-monitoring
spec:
  replicas: 2
  selector:
    matchLabels:
      app: price-monitoring
      server: backend-batch
  template:
    metadata:
      labels:
        app: price-monitoring
        server: backend-batch
    spec:
      containers:
        - name: backend-batch
          image: registry.local:5000/price-monitoring-backend:3e13566f493a8702dc555839f8bb28468e985bcb
          command: ["sidekiq", "-C", "config/sidekiq.yml", "-e", "production"]
          ports:
            - name: http
              containerPort: 3000
