manifests/price-monitoring/backend-db.yaml
#
# Service
#

apiVersion: v1
kind: Service
metadata:
  name: backend-db-service
  namespace: price-monitoring
spec:
  selector:
    app: price-monitoring
    server: backend-db
  type: LoadBalancer
  ports:
    - name: backend-db-port
      protocol: TCP
      port: 3306
      targetPort: 3306
  loadBalancerIP: 192.168.0.212

---
#
# Deployment
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-db-deployment
  namespace: price-monitoring
  labels:
    app: price-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-monitoring
      server: backend-db
  template:
    metadata:
      labels:
        app: price-monitoring
        server: backend-db
    spec:
      containers:
        - name: backend-db
          image: mysql/mysql-server:8.0
          ports:
            - name: backend-db-port
              containerPort: 3306
          volumeMounts:
            - name: backend-db-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: backend-db-storage
          persistentVolumeClaim:
            claimName: backend-db-pvc
