manifests/price-monitoring/backend-playwright.yaml
#
# Service
#

apiVersion: v1
kind: Service
metadata:
  name: backend-playwright-service
  namespace: price-monitoring
spec:
  selector:
    app: price-monitoring
    server: backend-playwright
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 8888
      targetPort: 8888
  loadBalancerIP: 192.168.0.215

---
#
# Deployment
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-playwright-deployment
  namespace: price-monitoring
  labels:
    app: price-monitoring
spec:
  replicas: 5
  selector:
    matchLabels:
      app: price-monitoring
      server: backend-playwright
  template:
    metadata:
      labels:
        app: price-monitoring
        server: backend-playwright
    spec:
      containers:
        - name: backend-playwright
          image: registry.local:5000/price-monitoring-backend-playwright:8f06e3e5c9bbea2831a92e2ad042de2ed069e82e
          ports:
            - name: http
              containerPort: 8888
