manifests/price-monitoring/backend-redis.yaml
#
# Service
#

apiVersion: v1
kind: Service
metadata:
  name: backend-redis-service
  namespace: price-monitoring
spec:
  selector:
    app: price-monitoring
    server: backend-redis
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 6379
      targetPort: 6379
  loadBalancerIP: 192.168.0.213

---
#
# Deployment
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-redis-deployment
  namespace: price-monitoring
  labels:
    app: price-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-monitoring
      server: backend-redis
  template:
    metadata:
      labels:
        app: price-monitoring
        server: backend-redis
    spec:
      containers:
        - name: backend-redis
          image: redis
          args: ["--appendonly", "yes"]
          ports:
            - name: http
              containerPort: 6379
          volumeMounts:
            - name: backend-redis-storage
              mountPath: /data
      volumes:
        - name: backend-redis-storage
          persistentVolumeClaim:
            claimName: backend-redis-pvc
