manifests/price-monitoring/backend-tor.yaml
#
# Service
#

apiVersion: v1
kind: Service
metadata:
  name: backend-tor-service
  namespace: price-monitoring
spec:
  selector:
    app: price-monitoring
    server: backend-tor
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 9050
      targetPort: 9050
  loadBalancerIP: 192.168.0.214

---
#
# Deployment
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-tor-deployment
  namespace: price-monitoring
  labels:
    app: price-monitoring
spec:
  replicas: 20
  selector:
    matchLabels:
      app: price-monitoring
      server: backend-tor
  template:
    metadata:
      labels:
        app: price-monitoring
        server: backend-tor
    spec:
      containers:
        - name: backend-tor
          image: registry.local:5000/price-monitoring-backend-tor:147ef265b8d70ca9ff8f5110aea6e1c311a4e47e
          ports:
            - name: http
              containerPort: 9050
