manifests/price-monitoring/backend.yaml
#
# Service
#

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: price-monitoring
spec:
  selector:
    app: price-monitoring
    server: backend
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  loadBalancerIP: 192.168.0.210

---
#
# Deployment
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: price-monitoring
  labels:
    app: price-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-monitoring
      server: backend
  template:
    metadata:
      labels:
        app: price-monitoring
        server: backend
    spec:
      containers:
        - name: backend
          image: registry.local:5000/price-monitoring-backend:aca01e4d16a6145d591d327c418f62ef0da12363
          command: ["./bin/rails", "server", "-b", "0.0.0.0", "-p", "3000", "-e", "production"]
          ports:
            - name: http
              containerPort: 3000
