manifests/price-monitoring/bff.yaml
#
# Service
#

apiVersion: v1
kind: Service
metadata:
  name: bff-service
  namespace: price-monitoring
spec:
  selector:
    app: price-monitoring
    server: bff
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  loadBalancerIP: 192.168.0.216

---
#
# Deployment
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-deployment
  namespace: price-monitoring
  labels:
    app: price-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-monitoring
      server: bff
  template:
    metadata:
      labels:
        app: price-monitoring
        server: bff
    spec:
      containers:
        - name: bff
          image: registry.local:5000/price-monitoring-bff:d1c71e7e9ece7d7b2c8d42c28dd0150e591a2f11
          ports:
            - name: http
              containerPort: 3000
