manifests/price-monitoring/frontend.yaml
#
# Service
#

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: price-monitoring
spec:
  selector:
    app: price-monitoring
    server: frontend
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  loadBalancerIP: 192.168.0.217

---
#
# Deployment
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: price-monitoring
  labels:
    app: price-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-monitoring
      server: frontend
  template:
    metadata:
      labels:
        app: price-monitoring
        server: frontend
    spec:
      containers:
        - name: frontend
          image: registry.local:5000/price-monitoring-frontend:9f65be143998e58c92bc48aabab235749559443e
          ports:
            - name: http
              containerPort: 3000
