manifests/price-monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: price-monitoring
spec:
  selector:
    app: price-monitoring
    server: backend
  type: LoadBalancer
  ports:
    - name: backend-port
      protocol: TCP
      port: 3000
      targetPort: 3000
  loadBalancerIP: 192.168.0.210
