manifests/price-monitoring/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: price-monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: "110.233.66.131/32,192.168.0.0/16"
    # 自宅サーバのグローバルIPを捕捉するためのアノテーション
    # CronJobでホワイトリスト内の自宅サーバのグローバルIPを書き換える仕組みにしている
    price-monitoring/managed-dynamic-ip: "110.233.66.131/32"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - auth.price-monitoring.kuroweb.net
        - www.auth.price-monitoring.kuroweb.net
      secretName: auth-ingress-cert
  rules:
    - host: auth.price-monitoring.kuroweb.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-provider-service
                port:
                  number: 3000
    - host: www.auth.price-monitoring.kuroweb.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-provider-service
                port:
                  number: 3000
